--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="popular-and-price">
       <h2>Популярные товары</h2>
-
+<img src="img/glasses-1.jpg" alt="очки «Классика жанра»" height="206" width="306">
       <div class="popular-items">
         <div class="catalog-item">
           Фото товара 1
