--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <b>400 р.</b>
         </div>
         <div class="catalog-item">
-          Фото товара 3
+          <img src="img/glasses-3.jpg" alt="очки «Базилис»" width="306" height="206">
           <h3>Очки «Базилис»</h3>
           <b>500 р.</b>
         </div>
