--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
       <label for="fullname">Представьтесь пожалуйста:</label>
       <input type="text" name="fullname" id="fullname">
     </div>
+    <div class="feedback-form-group">
+     <label for="phone">Контактный телефон:</label>
+     <input type="text" name="phone" id="phone">
+    </div>
+    <div class="feedback-form-group">
+      <label for="email">Электронная почта:</label>
+      <input type="text" name="email" id="email">
+    </div>
+    <div class="checkbox-area">
+      <label>
+        <input type="checkbox" name="subscription">Я согласен получать спам и смс на телефон</label>
+    </div>
+    <div class="feedback-form-group">
+      <label for="topic">Тема обращения:
+        </label>
+        <select name="topic" id="topic"></select>
+    </div>
   </form>
 </div>
 
