--- a/index.html
+++ b/index.html
@@ -165,7 +165,15 @@
     <div class="feedback-form-group">
       <label for="topic">Тема обращения:
         </label>
-        <select name="topic" id="topic"></select>
+        <select name="topic" id="topic">
+          <option value="1">Условия доставки</option>
+          <option value="2">Возврат товара</option>
+          <option value="3">Жалоба в Роспотребнадзор</option>
+        </select>
+    </div>
+    <div class="feedback-form-group">
+      <label for="message">Текст обращения:</label>
+      <textarea name="message" id="message"></textarea>
     </div>
   </form>
 </div>
