--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <label for="message">Текст обращения:</label>
       <textarea name="message" id="message"></textarea>
     </div>
+    <input class="btn" type="submit" value="Отправить">
   </form>
 </div>
 
